added info on drafts; updated some screenshots; added some callout boxes. more to review

--- a/posts/2021-09-21-distill-blogs/biblio.bib
+++ b/posts/2021-09-21-distill-blogs/biblio.bib
@@ -36,6 +36,13 @@
   year = {2021}
 }
 
+@misc{hall2021cowplot,
+  author = {Hall, Meghan},
+  title = {An Introduction to {cowplot}},
+  url = {https://meghan.rbind.io/blog/2021-08-21-an-introduction-to-cowplot/},
+  year = {2021}
+}
+
 
 @misc{fisher2020penguins,
   author = {Fisher, Harry},
@@ -56,7 +63,7 @@
 @misc{kaye2020advent,
   author = {Kaye, Ella},
   title = {ELLA KAYE: Advent of Code 2020},
-  url = {https://ellakaye.rbind.io/posts/2020-12-09-advent-of-code-2020/},
+  url = {https://ellakaye.rbind.io/posts/2020-12-09_advent-of-code-2020/},
   year = {2020}
 }
 
