--- a/posts/2024-08-15-test-post/my-test-blog.qmd
+++ b/posts/2024-08-15-test-post/my-test-blog.qmd
@@ -1,3 +1,6 @@
 ---
-title: "Test"
+title: "blog post title"
+description: "blog post description (appears underneath the title in smaller text) which is included on the listing"
+draft: true
+draft-mode: visible
 ---
