--- a/posts/2022-10-24-quarto-blogs/index.qmd
+++ b/posts/2022-10-24-quarto-blogs/index.qmd
@@ -18,7 +18,7 @@ image: penguins.png
 draft: false
 ---
 
-About a year ago, I wrote my first ever blog post \~ about blogging \~ and tbh I'm a *little* embarrassed that this is only my third post here (does it count that I have *ideas* for blog posts squirreled away at least?? `r fontawesome::fa("grin-beam-sweat", fill = "#64605f", a11y = "sem")`). Regardless, you should trust me[^1] when I say that blogging is a great exercise for you to practice as regularly as you can -- it can help you to:
+About a year ago, I wrote my first ever blog post \~ about blogging \~ and tbh I'm a *little* embarrassed that this is only my third post here (does it count that I have *ideas* for blog posts squirreled away at least?? {{< fa face-grin-beam-sweat title="a grinning face with a bead of sweat dripping from its brow" >}}). Regardless, you should trust me[^1] when I say that blogging is a great exercise for you to practice as regularly as you can -- it can help you to:
 
 [^1]: Okay, you don't *just* have to trust me. Lots of data scientists advocate for blogging as an important skill and communication tool. Check out this [blog post](http://varianceexplained.org/r/start-blog/) by [David Robinson](https://twitter.com/drob) to start.
 
@@ -57,7 +57,7 @@ When you've written the same code 3 times, write a function<br><br>When you've g
 ```{=html}
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 ```
-## I. Before we chat about blogs...
+## I. Before we chat about blogs... {#I-MEDS}
 
 Our [Master of Environmental Data Science](https://bren.ucsb.edu/masters-programs/master-environmental-data-science){target="_blank"} (MEDS) students created the bones of their Quarto websites a couple months ago, and more recently took a little dive into website customization using Sass & CSS. For anyone who's looking to get started on their website-building journey, feel free to explore the following resources:
 
@@ -65,7 +65,7 @@ Our [Master of Environmental Data Science](https://bren.ucsb.edu/masters-program
 
 {{< fa palette title="Painters palette">}} [Customizing Quarto Websites: Make your website stand out using Sass & CSS](https://ucsb-meds.github.io/customizing-quarto-websites/#/title-slide){target="_blank"}
 
-## II. What's the difference between a website and a blog?
+## II. What's the difference between a website and a blog? {#II-blog-vs-website}
 
 If you've spent some time poking around the official [Quarto documentation](https://quarto.org/){target="_blank"}, you may have noticed instructions for creating either a [**Website**](https://quarto.org/docs/websites/){target="_blank"} or a [**Blog**](https://quarto.org/docs/websites/website-blog.html){target="_blank"} -- but what's the difference? Not much, aside from the initial structure:
 
@@ -83,16 +83,16 @@ knitr::include_graphics("media/blog.png")
 
 **A Quarto Blog is *a type* of Quarto Website** -- you can create websites that consist of just a single blog (like the above right-hand example), websites that have multiple blogs, or you can add a blog to a website that contains other content (which is what we'll be doing today).
 
-## III. Adding a blog to your personal Quarto website
+## III. Adding a blog to your personal Quarto website {#III-add-blog}
 
-::: {.dark-green-bg}
+::: dark-green-bg
 **TL;DR:** A couple of steps are required for setting up your blog, but generally speaking, you'll need:
 
-1. **a folder** (i.e. subdirectory) to hold all of your individual blog posts -- I called my folder `posts/` (though the name is up to you). I also (optionally) added a `_metadata.yml` file to this folder which includes some formatting and configuration options that will apply to *all* blog posts in this folder
+1.  **a folder** (i.e. subdirectory) to hold all of your individual blog posts -- I called my folder `posts/` (though the name is up to you). I also (optionally) added a `_metadata.yml` file to this folder which includes some formatting and configuration options that will apply to *all* blog posts in this folder
 
-2. **a listing page**, which lists all of your blog posts for viewers to browse and click through -- this is a `.qmd` file that you'll add to your website's navbar by including it in `_quarto.yml`
+2.  **a listing page**, which lists all of your blog posts for viewers to browse and click through -- this is a `.qmd` file that you'll add to your website's navbar by including it in `_quarto.yml`
 
-3. **blog posts!** Your listing page will be blank until you actually add your first blog post
+3.  **blog posts!** Your listing page will be blank until you actually add your first blog post
 :::
 
 <br>
@@ -101,15 +101,19 @@ Let's create those together now.
 
 1.  **Create a `/posts` folder:** Open up your Quarto website project and make sure you're in your root directory. Here, we'll create a new subdirectory, called `posts` (though you can call this whatever you want), where all of our blog posts will eventually live. To do so, you can either:
 
-    a. click on the *add folder* button, <img src="media/add-folder.png" style="display: inline-block; margin: 0; position: relative; top: 2px; width:20px;height:20px;"/>, in the Files pane, or
-    b. in the RStudio Terminal, run `mkdir posts`.
+    a.  click on the *add folder* button, <img src="media/add-folder.png" style="display: inline-block; margin: 0; position: relative; top: 2px; width:20px;height:20px;"/>, in the Files pane, or
+    b.  in the RStudio Terminal, run `mkdir posts`.
 
-2.  ***Optional:*** **Add a `_metadata.yml` file to `/posts`:** While not required, a `_metadata.yml` file can make your life easier if you want certain options to apply to *all* blog posts that you create. Create this one of two ways: 
+2.  ***Optional:*** **Add a `_metadata.yml` file to `/posts`:** While not required, a `_metadata.yml` file can make your life easier if you want certain options to apply to *all* blog posts that you create. Create this one of two ways:
 
-    a. Click into the `posts/` folder in the Files pane, then click *Blank File* \> *Text File* \> type `_metadata.yml` \> click *OK*, or
-    b. In the RStudio Terminal, run `cd posts` to move into that directory, then `touch _metadata.yml` to create the file
-    
+    a.  Click into the `posts/` folder in the Files pane, then click *Blank File* \> *Text File* \> type `_metadata.yml` \> click *OK*, or
+    b.  In the RStudio Terminal, run `cd posts` to move into that directory, then `touch _metadata.yml` to create the file
+
 Open your `_metadata.yml` in the Source pane to add options. I like these options[^2], but it's entirely up to you what you want to include (if anything at all):
+
+[^2]: **The `freeze` option:** Setting this option to `auto` will *only* re-render posts when you make updates to the source files (as opposed to re-rendering them each time you **Render Website** -- this can save time, particularly if you have computationally-heavy content in your blog posts). If you set this option to `true`, posts will *never* be re-rendered (even if you've made changes to the source files). If you use this option, you'll need to **Render** individual posts whenever you make changes to their source files *before* you **Render Website**, otherwise your updates will not appear. Check out [the Quarto documentation](https://quarto.org/docs/projects/code-execution.html#freeze){target="_blank"} and [this great short blog post](https://mine-cetinkaya-rundel.github.io/quarto-tip-a-day/posts/03-freeze/index.html){target="_blank"} for more information on `freeze`.
+
+    **The `title-block-banner` option:** Setting this option to `true` will enable a [banner style title block](https://quarto.org/docs/authoring/title-blocks.html#title-banners){target="_blank"} (where the title, subtitle, description, and categories are all positioned inside the banner) for all posts.
 
 ```{r filename="_metadata.yml"}
 #| eval: false
@@ -124,16 +128,13 @@ freeze: auto
 title-block-banner: true
 ```
 
-[^2]: **The `freeze` option:** Setting this option to `auto` will *only* re-render posts when you make updates to the source files (as opposed to re-rendering them each time you **Render Website** -- this can save time, particularly if you have computationally-heavy content in your blog posts). If you set this option to `true`, posts will *never* be re-rendered (even if you've made changes to the source files). If you use this option, you'll need to **Render** individual posts whenever you make changes to their source files *before* you **Render Website**, otherwise your updates will not appear. Check out [the Quarto documentation](https://quarto.org/docs/projects/code-execution.html#freeze){target="_blank"} and [this great short blog post](https://mine-cetinkaya-rundel.github.io/quarto-tip-a-day/posts/03-freeze/index.html){target="_blank"} for more information on `freeze`.
-
-    **The `title-block-banner` option:** Setting this option to `true` will enable a [banner style title block](https://quarto.org/docs/authoring/title-blocks.html#title-banners){target="_blank"} (where the title, subtitle, description, and categories are all positioned inside the banner) for all posts.
-    
 3.  **Create a [listing page](https://quarto.org/docs/websites/website-listings.html){target="_blank"}:** Add a `posts.qmd` file to your *root* directory (click on the R Project icon, <img src="media/rproj.png" style="display: inline-block; margin: 0; position: relative; top: 2px; width:20px;height:20px;"/>, in the Files pane to jump back to your project's root directory). There are a bunch of ways to create a new `.qmd` file, but one easy way is to choose *File* \> *New File* \> *Quarto Document...*. I'll give mine the title "My Blog" when prompted (this is the name that will appear as the title your listing page), then save it as `posts.qmd` (but you can choose whatever title and / or file name you'd like).
 
-::: {.callout-note collapse=true}
+::: {.callout-note collapse="true"}
 ## **What is a listing page?**
 
 A listing page is a web page with content that is automatically generated from a list of documents -- in this case, that would be a list of blog posts -- and looks something like this (or check out [my blog's listing page](https://samanthacsik.github.io/posts.html){target="_blank"}):
+
 ```{r}
 #| eval: true
 #| echo: false
@@ -143,7 +144,9 @@ knitr::include_graphics("media/quarto-listing-page.png")
 ```
 
 <!-- ::: {.center-text .small-text .gray-italic} -->
+
 <!-- An example listing page from the [Quarto Blog](https://quarto.org/docs/blog/){target="_blank"} showing multiple blog posts. Quarto has multiple [listing page layout options](https://quarto.org/docs/websites/website-listings.html#listing-types){target="_blank"} (`default` (shown above), `grid`, and `table`) for you to explore. -->
+
 <!-- ::: -->
 :::
 
@@ -191,7 +194,7 @@ website:
 knitr::include_graphics("media/blog-added.png")
 ```
 
-## IV. Add a blog post to your blog
+## IV. Add a blog post to your blog {#IV-add-post}
 
 Now that you have your listing page set up, we can start populating it with blog posts. *Repeat the following steps each time you want to add a new post.*
 
@@ -199,13 +202,14 @@ Now that you have your listing page set up, we can start populating it with blog
 
 2.  **Inside your new subdirectory, create an `index.qmd` file.** Your file path should look something like this: `myWebsite/posts/2022-10-24-my-blog-post/index.qmd`. This file is your blog post. Write all your content here!
 
-::: {.callout-note}
+::: callout-note
 ## **Why name your blog post file, `index.qmd`?**
-This is mostly important for maintaining short, clean URLs. 
+
+This is mostly important for maintaining short, clean URLs.
 
 Let's take this very blog post for example. The content that you're reading right now is written to the file, `samanthacsik.github.io/posts/2022-10-24-quarto-blogs/index.qmd` (you can check it out on [GitHub](https://github.com/samanthacsik/samanthacsik.github.io/blob/main/posts/2022-10-24-quarto-blogs/index.qmd){target="_blank"}), and the resulting URL is <https://samanthacsik.github.io/posts/2022-10-24-quarto-blogs/>.
 
-If I named my blog post file something like, `my-blog-post.qmd` (*rather than `index.qmd`*), the resulting URL would instead look like, <https://samanthacsik.github.io/posts/2022-10-24-quarto-blogs/my-blog-post.html>. This isn't necessarily *wrong* or broken, but it does result in a lengthier URL -- and short URLs tend to be easier to remember. 
+If I named my blog post file something like, `my-blog-post.qmd` (*rather than `index.qmd`*), the resulting URL would instead look like, <https://samanthacsik.github.io/posts/2022-10-24-quarto-blogs/my-blog-post.html>. This isn't necessarily *wrong* or broken, but it does result in a lengthier URL -- and short URLs tend to be easier to remember.
 :::
 
 3.  **Configure your blog post:** You can add a variety of different options to the YAML section of `index.qmd`. Here are my go-to options:
@@ -244,9 +248,10 @@ Some notes on the above options:
 -   Include an image (or gif) to add as a **preview image**, which will appear on your listing page alongside your post. Your image should live inside your post's subdirectory (e.g. `mywebsite/posts/2022-10-24-my-blog-post/preview-image.png`).
 
 -   Set **`draft: true`** while you're still working on your blog post to prevent it from showing up on your listing page, site map, or site search (it will still be available at a searchable URL). When you're ready to publish, just remove `draft: true` from your YAML (or set to `false`), then render your post.
-    - Quarto v1.5.56 introduced draft banners, which will appear on any draft posts (see screenshot, below). You can also control how drafts are linked / rendered on your website using the [`draft-mode` option](https://quarto.org/docs/websites/website-drafts.html#appearance-of-drafts){target="_blank"}. By default, any page set as a draft will not be linked or searchable. If you want your draft to still be searchable at it's URL (helpful if you want to share a draft with someone, but don't want it showing up on your listing page just yet), consider setting `draft-mode` to either `unlinked` or `visible` -- check out the [documentation](https://quarto.org/docs/websites/website-drafts.html) for more information.
 
-::: {.callout-tip}
+    -   Quarto v1.5.56 introduced draft banners, which will appear on any draft posts (see screenshot, below). You can also control how drafts are linked / rendered on your website using the [`draft-mode` option](https://quarto.org/docs/websites/website-drafts.html#appearance-of-drafts){target="_blank"}. By default, any page set as a draft will not be linked or searchable. If you want your draft to still be searchable at it's URL (helpful if you want to share a draft with someone, but don't want it showing up on your listing page just yet), consider setting `draft-mode` to either `unlinked` or `visible` -- check out the [documentation](https://quarto.org/docs/websites/website-drafts.html) for more information.
+
+::: callout-tip
 ## **Remember: You can also add options to `_metadata.yml` if you want them applied to *all* posts!**
 
 Do you want your own author / affiliation information applied to each blog post you write, by default? Add it instead to `_metadata.yml` and save yourself re-typing it each time you create a new post!
@@ -261,7 +266,7 @@ Are you collaborating on a blog post with additional authors? You can override t
 #| column: page
 #| fig-subcap: 
 #| - "A grid-style listing page featuring one blog post with a preview image, title, three categories, description, author, and publishing date"
-#| - "An example draft blog post, with a banner-style title block."
+#| - "An example draft blog post, with a banner-style title block. The draft notice will disappear and the blog post will appear on the listing page once `draft` is set to `false`."
 knitr::include_graphics("media/ex-listing-page.png")
 knitr::include_graphics("media/my-first-post.png")
 ```
@@ -275,11 +280,11 @@ If things aren't working as expected, double check your repository structure -- 
 knitr::include_graphics("media/repo-structure.png")
 ```
 
-## V. Some additional authoring features to explore
+## V. Some additional authoring features to explore {#V-additional-features}
 
-Blog posts are just Quarto documents, meaning you can combine prose, code, and embedded outputs all in one place, just like you would in any other `.qmd` file (which makes your blog the *perfect* place to create data science/programming tutorials both for yourself and others `r fontawesome::fa("smile-wink", fill = "#64605f", a11y = "sem")`). If you're looking for additional ways to enhance your posts, read on below:
+Blog posts are just Quarto documents, meaning you can combine prose, code, and embedded outputs all in one place, just like you would in any other `.qmd` file (which makes your blog the *perfect* place to create data science / programming tutorials both for yourself and others {{< fa smile-wink title="a smiling winking face" >}}). If you're looking for additional ways to enhance your posts, read on below:
 
-#### Adding footnotes
+### Adding footnotes
 
 There are multiple ways to include footnotes throughout your blog posts:
 
@@ -297,22 +302,22 @@ I am going to insert a footnote here[^1].
 I am going to insert an inline footnote here^[Here is my inline footnote].
 ```
 
-3.  You can also add footnotes that include multiple paragraphs. See the [source code](https://github.com/samanthacsik/samanthacsik.github.io/blob/main/posts/2022-10-24-quarto-blogs/index.qmd) for this blog post and take a peek at footnote #2 for an example on how to do so (or check out the [Quarto documentation](https://quarto.org/docs/authoring/footnotes-and-citations.html#footnotes)).
+3.  You can also add footnotes that include multiple paragraphs. See the [source code](https://github.com/samanthacsik/samanthacsik.github.io/blob/main/posts/2022-10-24-quarto-blogs/index.qmd){target="_blank"} for this blog post and take a peek at footnote #2 for an example on how to do so (or check out the [Quarto documentation](https://quarto.org/docs/authoring/footnotes-and-citations.html#footnotes){target="_blank"}).
 
 All footnotes will appear in a "Footnotes" section that is automatically generated for you.
 
-#### Creating a bibliography and adding citations
+### Creating a bibliography and adding citations
 
 Quarto supports the use of bibliography files for citing works throughout your blog post. There are a number of ways to do this, but so far, I've found creating a BibLaTex database to be relatively straightforward. This database takes the form of a plain-text `.bib` file where we can store all of our bibliographic information. That information needs to be encoded in a particular way (more on that below). Follow these steps to cite works in your blog posts:
 
-1.  First, create a `.bib` file in the folder containing your blog post (e.g. `myWebsite/posts/2022-10-24-my-blog-post/references.bib`) using the `touch` command in your RStudio Terminal or using the *Blank File* \> *Text File* button in the Files pane. I called mine `references.bib`, but the name is up to you.
+1.  First, create a `.bib` file in the folder containing your blog post (e.g. `myWebsite/posts/YYYY-MM-DD-my-blog-post/references.bib`) using the `touch` command in your RStudio Terminal or using the *Blank File* \> *Text File* button in the Files pane. I called mine `references.bib`, but the name is up to you.
 
-2.  To use your `references.bib` file, you'll need to add the `bibliography` option to your blog post's YAML:
+2.  Add the `bibliography` option to your blog post's YAML and provide it the name of your `.bib` file:
 
 ```{r}
 #| eval: false
 #| echo: true
-#| code-line-numbers: "12"
+#| code-line-numbers: false
 ---
 title: "blog post title"
 # ~ additional YAML options omitted for brevity ~
@@ -320,7 +325,7 @@ bibliography: references.bib
 ---
 ```
 
-3.  Next, we'll want to add some references. These take a particular format that generally looks like this (the number/types of fields included may vary):
+3.  Next, we'll want to add some references. These take a particular format that generally looks like this (the number / types of fields included may vary):
 
 ```{r filename="references.bib"}
 #| eval: false
@@ -336,11 +341,11 @@ bibliography: references.bib
 
 where `type` can be `manual`, `book`, `article`, `misc`, etc. (all case-insensitive) and `key` is the citation identifier used for inserting in-text citations (we'll get there soon).
 
--   There may be instances where you want to cite a resource that already has a BibTex citation available for you to copy over to your `references.bib` file (e.g. this blog post). For most resources, however, you'll need to construct your own. You can do this manually, or with the help of a BibTeX reference generator (Googling will yield plenty of options, but [zoterobib](https://zbib.org/) is a great place to start. Note that you may have to make some manual adjustments). Check out my [`references.bib` file](https://github.com/samanthacsik/samanthacsik.github.io/blob/main/posts/2022-10-24-quarto-blogs/references.bib) for this post as an example.
+-   There may be instances where you want to cite a resource that already has a BibTex citation available for you to copy over to your `references.bib` file (e.g. this blog post). For most resources, however, you'll need to construct your own. You can do this manually, or with the help of a BibTeX reference generator (Googling will yield plenty of options, but [zoterobib](https://zbib.org/){target="_blank"} is a great place to start. Note that you may have to make some manual adjustments). Check out my [`references.bib` file](https://github.com/samanthacsik/samanthacsik.github.io/blob/main/posts/2022-10-24-quarto-blogs/references.bib){target="_blank"} for this post as an example.
 
-4.  Now that you have BibTex references in your `.bib` file, you can start adding in-text citations. These generally take the form `[@key]` (but read more about Quarto citation syntax [here](https://quarto.org/docs/authoring/footnotes-and-citations.html#sec-citations)). When you add an in-text citation, Quarto will automatically add the reference to the bottom of your blog post under the "References" section.
+4.  Now that you have BibTex references in your `.bib` file, you can start adding in-text citations. These generally take the form `[@key]` (but read more about [Quarto citation syntax](https://quarto.org/docs/authoring/footnotes-and-citations.html#sec-citations){target="_blank"}). When you add an in-text citation, Quarto will automatically add the reference to the bottom of your blog post under the "References" section.
 
--   To give one final concrete example, let's say I want to cite my first (ever) blog post from last year. I can copy the BibTeX citation from the bottom of the post and paste it into my `references.bib` file:
+-   To give one final concrete example, let's say I want to cite my first (ever) blog post from 2021. I can copy the [BibTeX citation from the bottom of the post](http://localhost:6702/posts/2022-10-24-quarto-blogs/#citation){target="_blank"} and paste it into my `references.bib` file:
 
 ```{r}
 #| eval: false
@@ -355,13 +360,13 @@ where `type` can be `manual`, `book`, `article`, `misc`, etc. (all case-insensit
 }
 ```
 
--   I can now add an in-text citation using the `[@csik2021]` syntax here `r fontawesome::fa("arrow-right", fill = "#64605f", a11y = "sem")` [@csik2021]. Once cited, it will appear in my References section at the bottom of this post.
+-   I can now add an in-text citation using the `[@csik2021]` syntax, which will render it like this {{< fa arrow-right title="an arrow pointing to the right" >}} [@csik2021]. Once cited, the full reference will appear in my [References section at the bottom of this post](http://localhost:6702/posts/2022-10-24-quarto-blogs/#references).
 
 That wasn't so bad, right?? What if I told you there was an even *easier* way to add citations....Start by popping over to RStudio's Visual editor, if you're not already there (you should see buttons for working in either the **Source** or **Visual** editor in the top left corner of your source pane), and follow the steps below:
 
 1.  Place your cursor where you'd like to insert a citation, then from the **Insert** drop down menu, select **Citation**.
 
-2.  A new window will pop open with a number of different options for inserting citations. If you've already created a `references.bib` file, it will appear under the **My Sources** and **Bibliography** sections. You can choose any of your existing references to insert an in-text citation from *or* choose another option, like inserting a citation based on a DOI (!!! I can't tell you how awesome I think this is !!!). Once you add an in-text citation based on a DOI, the BibTeX reference will automatically be added to your `references.bib` file, as well as to your references list at the bottom of your post. If you don't yet have a `references.bib` file, one will automatically be generated for you. LIKE SERIOUSLY?? SO FREAKIN COOL.
+2.  A new window will pop open with a number of different options for inserting citations. If you've already created a `references.bib` file, it will appear under the **My Sources** and **Bibliography** sections. You can choose to insert citations using any of your existing references, *or* choose another option, like inserting a citation based on a DOI. Give it a try using [this DOI](https://doi.org/10.1371/journal.pcbi.1010567){target="_blank"} from Gaynor et al. 2022 -- you'll notice that when an in-text citation is added using a DOI, your `references.bib` file will automatically be updated with the BibTeX reference. If you don't yet have a `.bib` file, one will be automatically generated for you. LIKE SERIOUSLY?? Where was this when I was in grad school?? SO FREAKIN COOL. 
 
 ```{r}
 #| eval: true
@@ -373,36 +378,36 @@ knitr::include_graphics("media/citations.png")
 
 Okay, back to being chill...
 
-#### Article layout
+### Article layout
 
-Quarto also supports a number of different [page layout options](https://quarto.org/docs/authoring/article-layout.html) to further customize the appearance of your posts. Explore different ways to position elements on your page, including embedding outputs, captions, references in your [page margin](https://quarto.org/docs/authoring/article-layout.html#margin-content) (one of my personal faves...despite the fact that I don't have any here in this post).
+Quarto also supports a number of different [page layout options](https://quarto.org/docs/authoring/article-layout.html){target="_blank"} to further customize the appearance of your posts. Explore different ways to position elements on your page, including embedding outputs, captions, references in your [page margin](https://quarto.org/docs/authoring/article-layout.html#margin-content){target="_blank"} (one of my personal faves...despite the fact that I don't have any here in this post).
 
-## VI. A note on adding an additional blog (or more) to your site
+## VI. A note on adding an additional blog (or more) to your site {#VI-more-blogs}
 
-You aren't limited to just one blog/listing page! Repeat [Part III](https://samanthacsik.github.io/posts/2022-10-24-quarto-blogs/#iii.-adding-a-blog-to-your-personal-quarto-website) to add a second listing page + content to your website. My personal website contains three listing pages -- one called [posts](https://samanthacsik.github.io/posts) (aka my actual blog), one called [talks & workshops](https://samanthacsik.github.io/talks_workshops), and one called [projects](https://samanthacsik.github.io/projects). Explore the [GitHub repo](https://github.com/samanthacsik/samanthacsik.github.io) to take a peek at the file structure and source code. 
+You aren't limited to just one blog / listing page! Repeat [Part III](#III-add-blog){target="_blank"} to add a second listing page + content to your website. My personal website contains *four* listing pages -- one called [posts](../../posts.qmd){target="_blank"} (aka my actual blog), one called [talks & workshops](../../talks_workshops.qmd){target="_blank"}, once called [courses](../../courses.qmd){target="_blank"}, and one called [projects](../../projects.qmd){target="_blank"}. Explore the [GitHub repo](https://github.com/samanthacsik/samanthacsik.github.io){target="_blank"} to take a peek at the file structure and source code.
 
-## VII. Blogs to follow (+ one post from each that I've particularly enjoyed)
+## VII. Blogs to follow (+ one post from each that I've particularly enjoyed) {#VII-follow}
 
 There are *tons* of awesome data science bloggers out there -- here are just a few that I've enjoyed, but get out there and start exploring others for yourself!
 
-*Also note: I've included one blog post from each creator and added citations. Check out the [source code for this post](https://github.com/samanthacsik/samanthacsik.github.io/blob/main/posts/2022-10-24-quarto-blogs/index.qmd) if you're looking for additional examples on how to do it.*
+*Also note: I've included one blog post from each creator and added citations (with the year only format). Check out the [source code for this post](https://github.com/samanthacsik/samanthacsik.github.io/blob/main/posts/2022-10-24-quarto-blogs/index.qmd) to see how it's done.*
 
--   [Piping Hot Data](https://www.pipinghotdata.com/blog.html), by Shannon Pileggi, and her post, [Curating for `@WeAreRLadies` on Twitter](https://www.pipinghotdata.com/posts/2021-09-23-curating-for-wearerladies-on-twitter/) [-@pileggi2021curating]
+-   [Piping Hot Data](https://www.pipinghotdata.com/blog.html){target="_blank"}, by Shannon Pileggi, and her post, [Curating for `@WeAreRLadies` on Twitter](https://www.pipinghotdata.com/posts/2021-09-23-curating-for-wearerladies-on-twitter/){target="_blank"} [-@pileggi2021curating]
 
--   [Meghan Hall's Blog](https://meghan.rbind.io/blog/), and her post, [Increasing the Flexibility and Robustness of Plots in ggplot2](https://meghan.rbind.io/blog/plot-robustness/) [-@hall2022]
+-   [Meghan Hall's Blog](https://meghan.rbind.io/blog/){target="_blank"}, and her post, [Increasing the Flexibility and Robustness of Plots in ggplot2](https://meghan.rbind.io/blog/plot-robustness/){target="_blank"} [-@hall2022]
 
--   [Cosima Meyer's Blog](https://cosimameyer.com/#post), and her post, [Understanding the Basics of Package Writing in R](https://cosimameyer.com/post/understanding-the-basics-of-package-writing-in-r/) [-@meyer2022]
+-   [Cosima Meyer's Blog](https://cosimameyer.com/#post){target="_blank"}, and her post, [Understanding the Basics of Package Writing in R](https://cosimameyer.com/post/understanding-the-basics-of-package-writing-in-r/){target="_blank"} [-@meyer2022]
 
--   [Notes from a Data Witch](https://blog.djnavarro.net/) by Danielle Navarro, and her post, [Getting started with Apache Arrow](https://blog.djnavarro.net/posts/2021-11-19_starting-apache-arrow-in-r/) [-@navarro2021]
+-   [Notes from a Data Witch](https://blog.djnavarro.net/){target="_blank"} by Danielle Navarro, and her post, [Getting started with Apache Arrow](https://blog.djnavarro.net/posts/2021-11-19_starting-apache-arrow-in-r/){target="_blank"} [-@navarro2021]
 
--   [Beatriz Milz's Blog](https://beamilz.com/posts/), and her post [Introduction to GitHub Actions for R users](https://beamilz.com/posts/series-gha/2022-series-gha-1-what-is/en/) [-@milz2022]
+-   [Beatriz Milz's Blog](https://beamilz.com/posts/){target="_blank"}, and her post [Introduction to GitHub Actions for R users](https://beamilz.com/posts/series-gha/2022-series-gha-1-what-is/en/){target="_blank"} [-@milz2022]
 
--   [Albert Rapp's Blog](https://albert-rapp.de/blog.html), and his post [Recreating the Storytelling with Data look with ggplot](https://albert-rapp.de/posts/ggplot2-tips/10_recreating_swd_look/10_recreating_swd_look) [-@rapp2022]
+-   [Albert Rapp's Blog](https://albert-rapp.de/blog.html){target="_blank"}, and his post [Recreating the Storytelling with Data look with ggplot](https://albert-rapp.de/posts/ggplot2-tips/10_recreating_swd_look/10_recreating_swd_look){target="_blank"} [-@rapp2022]
 
--   [Cédric Scherer](https://www.cedricscherer.com/), and his post [A ggplot2 Tutorial for Beautiful Plotting in R](https://www.cedricscherer.com/2019/08/05/a-ggplot2-tutorial-for-beautiful-plotting-in-r/) [-@scherer2019]
+-   [Cédric Scherer](https://www.cedricscherer.com/){target="_blank"}, and his post [A ggplot2 Tutorial for Beautiful Plotting in R](https://www.cedricscherer.com/2019/08/05/a-ggplot2-tutorial-for-beautiful-plotting-in-r/){target="_blank"} [-@scherer2019]
 
-## VIII. Additional Resources
+## VIII. Additional Resources {#VIII-resources}
 
--   [The ultimate guide to starting a Quarto blog](https://albert-rapp.de/posts/13_quarto_blog_writing_guide/13_quarto_blog_writing_guide.html), by [Albert Rapp](https://albert-rapp.de/) is incredibly thorough and explores even more ways to customize your blog. Check it out!
+-   [The ultimate guide to starting a Quarto blog](https://albert-rapp.de/posts/13_quarto_blog_writing_guide/13_quarto_blog_writing_guide.html){target="_blank"}, by [Albert Rapp](https://albert-rapp.de/){target="_blank"} is incredibly thorough and explores even more ways to customize your blog. Check it out!
 
--   [Creating a blog with Quarto in 10 steps](https://beamilz.com/posts/2022-06-05-creating-a-blog-with-quarto/en/), by [Beatriz Milz](https://beamilz.com/about.html) walks through the steps of setting up a new Quarto Blog project. She also details how to set up [giscus](https://giscus.app/) to enable comments on your blog posts, which is something I've been eager to try myself!
+-   [Creating a blog with Quarto in 10 steps](https://beamilz.com/posts/2022-06-05-creating-a-blog-with-quarto/en/){target="_blank"}, by [Beatriz Milz](https://beamilz.com/about.html){target="_blank"} walks through the steps of setting up a new Quarto Blog project. She also details how to set up [giscus](https://giscus.app/){target="_blank"} to enable comments on your blog posts.
